ステージ1からステージ2シーン遷移完了

--- a/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
+++ b/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
@@ -211,6 +211,7 @@
     <ClCompile Include="EnemyAnimation.cpp" />
     <ClCompile Include="EnTest.cpp" />
     <ClCompile Include="GameCamera.cpp" />
+    <ClCompile Include="IStage.cpp" />
     <ClCompile Include="Physics\GhostObject.cpp" />
     <ClCompile Include="GroupCoreGenerator.cpp" />
     <ClCompile Include="Menu.cpp" />
@@ -234,6 +235,7 @@
     <ClCompile Include="SkinModelRender.cpp" />
     <ClCompile Include="SpriteRender.cpp" />
     <ClCompile Include="Stage1.cpp" />
+    <ClCompile Include="Stage2.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -299,6 +301,7 @@
     <ClInclude Include="EnemyAnimation.h" />
     <ClInclude Include="EnTest.h" />
     <ClInclude Include="GameCamera.h" />
+    <ClInclude Include="IStage.h" />
     <ClInclude Include="Physics\GhostObject.h" />
     <ClInclude Include="GroupCoreGenerator.h" />
     <ClInclude Include="Menu.h" />
@@ -324,6 +327,7 @@
     <ClInclude Include="SkinModelRender.h" />
     <ClInclude Include="SpriteRender.h" />
     <ClInclude Include="Stage1.h" />
+    <ClInclude Include="Stage2.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="system\system.h" />
     <ClInclude Include="Title.h" />
