--- a/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
+++ b/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
@@ -236,6 +236,7 @@
     <ClCompile Include="SpriteRender.cpp" />
     <ClCompile Include="Stage1.cpp" />
     <ClCompile Include="Stage2.cpp" />
+    <ClCompile Include="Stage3.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -328,6 +329,7 @@
     <ClInclude Include="SpriteRender.h" />
     <ClInclude Include="Stage1.h" />
     <ClInclude Include="Stage2.h" />
+    <ClInclude Include="Stage3.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="system\system.h" />
     <ClInclude Include="Title.h" />
