DrNightmareクラスを追加

--- a/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
+++ b/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj
@@ -205,6 +205,7 @@
     <ClCompile Include="BossBoar.cpp" />
     <ClCompile Include="BossEnBase.cpp" />
     <ClCompile Include="DrBoar.cpp" />
+    <ClCompile Include="DrNightmare.cpp" />
     <ClCompile Include="EnArmyGenerator.cpp" />
     <ClCompile Include="EnBase.cpp" />
     <ClCompile Include="EnBehaviorTest.cpp" />
@@ -300,6 +301,7 @@
     <ClInclude Include="BossBoar.h" />
     <ClInclude Include="BossEnBase.h" />
     <ClInclude Include="DrBoar.h" />
+    <ClInclude Include="DrNightmare.h" />
     <ClInclude Include="EnArmyGenerator.h" />
     <ClInclude Include="EnBase.h" />
     <ClInclude Include="EnBehaviorTest.h" />
