メニュー画面のステータスを選択するとステータス画面を表示できるようにしました。

--- a/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj.filters
+++ b/sotukenGame/Sample_15_05/Sample_15_05/Sample_15_05.vcxproj.filters
@@ -250,6 +250,9 @@
     <ClCompile Include="DrNightmare.cpp">
       <Filter>ソースファイル\Game\Charactor\Enemy</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerStatus.cpp">
+      <Filter>ソースファイル\Game\UI</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="system\system.h">
@@ -530,6 +533,9 @@
     </ClInclude>
     <ClInclude Include="DrNightmare.h">
       <Filter>ソースファイル\Game\Charactor\Enemy</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerStatus.h">
+      <Filter>ソースファイル\Game\UI</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
